{
  "version": 4,
  "terraform_version": "1.4.3",
  "serial": 61,
  "lineage": "a1b4c02f-817f-87ad-f088-c9d856be9aeb",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0978ea9db126e6af3",
            "association_id": "eipassoc-0735f4afa51046754",
            "domain": "vpc",
            "id": "eipalloc-0978ea9db126e6af3",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0d2129d1394e3530a",
            "private_dns": "ip-10-0-1-215.eu-central-1.compute.internal",
            "private_ip": "10.0.1.215",
            "public_dns": "ec2-3-124-225-245.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.124.225.245",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "smartfind nat gateway 1"
            },
            "tags_all": {
              "Name": "smartfind nat gateway 1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6f452d0818d9111",
            "association_id": "eipassoc-06343732571508e70",
            "domain": "vpc",
            "id": "eipalloc-0a6f452d0818d9111",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0216c834acf090cd5",
            "private_dns": "ip-10-0-2-68.eu-central-1.compute.internal",
            "private_ip": "10.0.2.68",
            "public_dns": "ec2-3-65-105-51.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.65.105.51",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "smartfind nat gateway 2"
            },
            "tags_all": {
              "Name": "smartfind nat gateway 2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030795981198:internet-gateway/igw-07bcec7ee1576a87d",
            "id": "igw-07bcec7ee1576a87d",
            "owner_id": "030795981198",
            "tags": {
              "Name": "smartfind-vpc-igw"
            },
            "tags_all": {
              "Name": "smartfind-vpc-igw"
            },
            "vpc_id": "vpc-016e444edfc1639ad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateways",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0978ea9db126e6af3",
            "connectivity_type": "public",
            "id": "nat-077fc28257a622e95",
            "network_interface_id": "eni-0d2129d1394e3530a",
            "private_ip": "10.0.1.215",
            "public_ip": "3.124.225.245",
            "subnet_id": "subnet-0c5d12eead1f8040f",
            "tags": {
              "Name": "smartfind gateway - 1"
            },
            "tags_all": {
              "Name": "smartfind gateway - 1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eips",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.vpc_public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6f452d0818d9111",
            "connectivity_type": "public",
            "id": "nat-0eda2f959d8002fc7",
            "network_interface_id": "eni-0216c834acf090cd5",
            "private_ip": "10.0.2.68",
            "public_ip": "3.65.105.51",
            "subnet_id": "subnet-0352521917e8bc521",
            "tags": {
              "Name": "smartfind gateway - 2"
            },
            "tags_all": {
              "Name": "smartfind gateway - 2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eips",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.vpc_public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030795981198:route-table/rtb-0a74a0af31b94bce0",
            "id": "rtb-0a74a0af31b94bce0",
            "owner_id": "030795981198",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-077fc28257a622e95",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "smartfind private route table 1"
            },
            "tags_all": {
              "Name": "smartfind private route table 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-016e444edfc1639ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eips",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gateways",
            "module.vpc.aws_subnet.vpc_public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030795981198:route-table/rtb-0f45c4925ef7247ac",
            "id": "rtb-0f45c4925ef7247ac",
            "owner_id": "030795981198",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0eda2f959d8002fc7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "smartfind private route table 2"
            },
            "tags_all": {
              "Name": "smartfind private route table 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-016e444edfc1639ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eips",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gateways",
            "module.vpc.aws_subnet.vpc_public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030795981198:route-table/rtb-083f0a68c3ce9f4bc",
            "id": "rtb-083f0a68c3ce9f4bc",
            "owner_id": "030795981198",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07bcec7ee1576a87d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "smartfind public route table"
            },
            "tags_all": {
              "Name": "smartfind public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-016e444edfc1639ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0854eae566a8f7da2",
            "route_table_id": "rtb-0a74a0af31b94bce0",
            "subnet_id": "subnet-011a72b5815d70ce4"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eips",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gateways",
            "module.vpc.aws_route_table.private_route_tables",
            "module.vpc.aws_subnet.vpc_private_subnets",
            "module.vpc.aws_subnet.vpc_public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079ba0dd6a7225eb9",
            "route_table_id": "rtb-0f45c4925ef7247ac",
            "subnet_id": "subnet-0521fdd665d2d3218"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eips",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gateways",
            "module.vpc.aws_route_table.private_route_tables",
            "module.vpc.aws_subnet.vpc_private_subnets",
            "module.vpc.aws_subnet.vpc_public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a0dad0bebfcc333",
            "route_table_id": "rtb-083f0a68c3ce9f4bc",
            "subnet_id": "subnet-0c5d12eead1f8040f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.vpc_public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a6740b837425363",
            "route_table_id": "rtb-083f0a68c3ce9f4bc",
            "subnet_id": "subnet-0352521917e8bc521"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.vpc_public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "docdb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030795981198:security-group/sg-0fe4abc93ba812bdb",
            "description": "DocumentDB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe4abc93ba812bdb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0566c2d068fc87066"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "obase-docdb-sg",
            "name_prefix": "",
            "owner_id": "030795981198",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-016e444edfc1639ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.jumpbox_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jumpbox_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030795981198:security-group/sg-0566c2d068fc87066",
            "description": "Jumpbox Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0566c2d068fc87066",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jumpbox_sg",
            "name_prefix": "",
            "owner_id": "030795981198",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-016e444edfc1639ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "opensearch_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030795981198:security-group/sg-0eee0db8e38a59c0d",
            "description": "OpenSearch Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eee0db8e38a59c0d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0566c2d068fc87066"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "obase-opensearch-sg",
            "name_prefix": "",
            "owner_id": "030795981198",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-016e444edfc1639ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.jumpbox_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030795981198:security-group/sg-0d98601ca75d07c31",
            "description": "RDS Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d98601ca75d07c31",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0566c2d068fc87066"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "obase-rds-sg",
            "name_prefix": "",
            "owner_id": "030795981198",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-016e444edfc1639ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.jumpbox_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030795981198:subnet/subnet-011a72b5815d70ce4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011a72b5815d70ce4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "030795981198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "smartfind-private-subnet-1",
              "kubernetes.io/cluster/smartfind-eks-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "smartfind-private-subnet-1",
              "kubernetes.io/cluster/smartfind-eks-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-016e444edfc1639ad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030795981198:subnet/subnet-0521fdd665d2d3218",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0521fdd665d2d3218",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "030795981198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "smartfind-private-subnet-2",
              "kubernetes.io/cluster/smartfind-eks-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "smartfind-private-subnet-2",
              "kubernetes.io/cluster/smartfind-eks-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-016e444edfc1639ad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030795981198:subnet/subnet-0c5d12eead1f8040f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5d12eead1f8040f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "030795981198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "smartfind-public-subnet-1",
              "kubernetes.io/cluster/smartfind-eks-dev": "shared",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "smartfind-public-subnet-1",
              "kubernetes.io/cluster/smartfind-eks-dev": "shared",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-016e444edfc1639ad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030795981198:subnet/subnet-0352521917e8bc521",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0352521917e8bc521",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "030795981198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "smartfind-public-subnet-2",
              "kubernetes.io/cluster/smartfind-eks-dev": "shared",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "smartfind-public-subnet-2",
              "kubernetes.io/cluster/smartfind-eks-dev": "shared",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-016e444edfc1639ad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030795981198:vpc/vpc-016e444edfc1639ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07ffce58873dd101b",
            "default_route_table_id": "rtb-0f9c7fcebf9070efa",
            "default_security_group_id": "sg-0033a5db03604a4c9",
            "dhcp_options_id": "dopt-020d09f3e23645c77",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-016e444edfc1639ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f9c7fcebf9070efa",
            "owner_id": "030795981198",
            "tags": {
              "Name": "smartfind-vpc"
            },
            "tags_all": {
              "Name": "smartfind-vpc"
            }
          }
        }
      ]
    }
  ]
}